--- a/index.html
+++ b/index.html
@@ -202,12 +202,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3 col-xs-6 no-space banner_product">
-              <div class="product-card__container oribe-category-grid">
-                <a class="grid-image" href="/oribestorefront/oribe/en/-/Shop-All/Oribe-Hair/Liters/Conditioner-for-Beautiful-Color---Liter/p/400016" title="image_product_code-400016" data-product-code="400016" data-product-name="Conditioner for Beautiful Color - Liter" data-product-price="168.0" data-product-url="/oribestorefront/oribe/en/-/Shop-All/Oribe-Hair/Liters/Conditioner-for-Beautiful-Color---Liter/p/400016" data-product-tag-category="">
-                   <img src="/assets/banner1.png" alt="Conditioner for Beautiful Color - Liter" title="Conditioner for Beautiful Color - Liter"> </a>
-              </div>
-            </div>
+
             <div class="col-md-3 col-xs-6 no-space">
               <div class="product-card__container oribe-category-grid">
                 <div class="oribe-product-sticker"> </div>
@@ -230,6 +225,13 @@
                     <form id="configureForm400021" class="configure_form" action="/oribestorefront/oribe/en/-/Shop-All/Oribe-Hair/Liters/Shampoo-for-Beautiful-Color---Liter/p/400021/configuratorPage/" method="get"></form>
                   </div>
                 </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 col-xs-6 no-space banner_product blocks_2">
+              <div class="product-card__container oribe-category-grid">
+                <a class="grid-image" href="/oribestorefront/oribe/en/-/Shop-All/Oribe-Hair/Liters/Conditioner-for-Beautiful-Color---Liter/p/400016" title="image_product_code-400016" data-product-code="400016" data-product-name="Conditioner for Beautiful Color - Liter" data-product-price="168.0" data-product-url="/oribestorefront/oribe/en/-/Shop-All/Oribe-Hair/Liters/Conditioner-for-Beautiful-Color---Liter/p/400016" data-product-tag-category="">
+                   <img src="/assets/banner1.png" alt="Conditioner for Beautiful Color - Liter" title="Conditioner for Beautiful Color - Liter"> </a>
               </div>
             </div>
             <div class="col-md-3 col-xs-6 no-space">
@@ -374,6 +376,12 @@
                     <form id="configureForm400346" class="configure_form" action="/oribestorefront/oribe/en/-/Shop-All/Oribe-Hair/Liters/Shampoo-for-Brilliance-%26-Shine---Liter/p/400346/configuratorPage/" method="get"></form>
                   </div>
                 </div>
+              </div>
+            </div>
+            <div class="col-md-3 col-xs-6 no-space banner_product ">
+              <div class="product-card__container oribe-category-grid">
+                <a class="grid-image" href="/oribestorefront/oribe/en/-/Shop-All/Oribe-Hair/Liters/Conditioner-for-Beautiful-Color---Liter/p/400016" title="image_product_code-400016" data-product-code="400016" data-product-name="Conditioner for Beautiful Color - Liter" data-product-price="168.0" data-product-url="/oribestorefront/oribe/en/-/Shop-All/Oribe-Hair/Liters/Conditioner-for-Beautiful-Color---Liter/p/400016" data-product-tag-category="">
+                   <img src="/assets/banner2.jpg" alt="Conditioner for Beautiful Color - Liter" title="Conditioner for Beautiful Color - Liter"> </a>
               </div>
             </div>
             <div class="col-md-3 col-xs-6 no-space">
@@ -616,6 +624,7 @@
                 </div>
               </div>
             </div>
+
             <div class="col-md-3 col-xs-6 no-space">
               <div class="product-card__container oribe-category-grid">
                 <div class="oribe-product-sticker"> </div>
